added missing babel plugin and travis ci badge

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rain-util",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "Max Millien",
   "description": "Generator based swiss knife for consuming apis, accessing postgres, and managing filesystem",
   "repository": {
@@ -45,6 +45,7 @@
   "devDependencies": {
     "babel": "*",
     "babel-cli": "*",
+    "babel-plugin-transform-object-rest-spread": "*",
     "babel-preset-es2015-node5": "*",
     "babel-preset-stage-3": "*",
     "tape": "4.x",
