--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rain-util",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "author": "Max Millien",
   "description": "Generator based swiss knife for consuming apis, accessing postgres, and managing filesystem",
   "repository": {
@@ -25,15 +25,17 @@
     "utils",
     "requests",
     "co",
-    "downloader",
+    "download",
     "generators",
     "bundle",
+    "convenience",
     "toolkit"
   ],
   "dependencies": {
     "array-generators": "1.x",
     "co": "4.x",
     "co-fs": "*",
+    "co-tape": "^1.0.0",
     "jsonfile": "2.x",
     "mkdirp": "*",
     "pg": "4.4.x",
