--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ node_js:
   - '4.2.1'
 before_install: npm install -g babel-cli
 install: npm install
+
+addons:
+  postgresql: "9.4"
+
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database rain_dev;' -U postgres
