--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rain-util",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "author": "Max Millien",
   "description": "Generator based swiss knife for consuming apis, accessing postgres, and managing filesystem",
   "repository": {
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "npm cache clean && rm -rf node_modules bin data",
     "build": "babel lib -d bin",
-    "test": "npm run build && tape ./test"
+    "test": "npm run build && faucet"
   },
   "keywords": [
     "koa",
@@ -32,20 +32,10 @@
     "toolkit"
   ],
   "dependencies": {
-    "array-generators": "1.x",
-    "co": "4.x",
-    "co-fs": "*",
-    "co-tape": "^1.0.0",
-    "jsonfile": "2.x",
-    "mkdirp": "*",
-    "pg": "4.4.x",
-    "postgres-gen": "0.x",
-    "postgres-gen-dao": "0.x",
-    "rain-util-http": "*",
+    "rain-util-download": "*",
     "rain-util-fs": "*",
+    "rain-util-http": "*",
     "rain-util-postgres": "*",
-    "request": "2.x",
-    "rimraf": "2.4.x",
     "thunkify-wrap": "1.x"
   },
   "devDependencies": {
@@ -54,9 +44,11 @@
     "babel-plugin-transform-object-rest-spread": "*",
     "babel-preset-es2015-node5": "*",
     "babel-preset-stage-3": "*",
+    "co-http-test": "*",
+    "co-tape": "*",
+    "faucet": "0.x",
     "tape": "4.x",
-    "tape-catch": "1.x",
-    "co-http-test": "*"
+    "tape-catch": "1.x"
   },
   "engines": {
     "node": ">= 4.2.0"
